[SPARK-53814] Use Java `List.of` instead of `Collections.(empty|singleton)List`
### What changes were proposed in this pull request?

This PR aims to use Java `List.of` instead of `Collections.emptyList` or `Collections.singletonList`.

### Why are the changes needed?

This PR aims to use Java 9+ `List.of` API instead of `Collections.emptyList` or `Collections.singletonList` because it's more concise and modern APIs.

```java
- HealthProbe healthyProbe =
-   new HealthProbe(Collections.singletonList(operator), Collections.emptyList());
  HealthProbe healthyProbe = new HealthProbe(List.of(operator), List.of());
```

### Does this PR introduce _any_ user-facing change?

No behavior change.

### How was this patch tested?

Pass the CIs.

### Was this patch authored or co-authored using generative AI tooling?

No.

Closes #366 from dongjoon-hyun/SPARK-53814.

Authored-by: Dongjoon Hyun <dongjoon@apache.org>
Signed-off-by: Dongjoon Hyun <dongjoon@apache.org>